# Ai-Based-Customer-Service

./: chunker.py  embedder.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  conversations.py  deps.py  rag.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  conversation.py  escalation.py  knowledge.py  prompt.py  user.py
app/schemas/: user.py
app/services/: __init__.py  chat_services.py
data/: faiss.index
frontend/web/: package-lock.json  package.json
frontend/web/src/: App.jsx  index.css
frontend/web/src/components/: ChatMessage.jsx  SettingsModal.jsx  Sidebar.jsx
