[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-postgres>=0.0.17",
    "openai>=2.44.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.50.2",
]
